# yolov4-postproc-cpp-sample

./: Dockerfile  README.md  run-final-project.sh
data/: conv2d_58_Conv2D_YoloRegion.npy  conv2d_66_Conv2D_YoloRegion.npy  conv2d_74_Conv2D_YoloRegion.npy
project/: CMakeLists.txt
project/src/: yolo-postprocess.cpp
